crates/plotnik-lib/tests/snapshots/conformance__optional_scalar_absent_is_null.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (lexical_declaration)? @decl (expression_statement) @stmt)

==== source ====
foo;

==== types ====
export interface Q {
  decl: Node | null;
  stmt: Node;
}

==== result ====
{"decl":null,"stmt":{"kind":"expression_statement","text":"foo;","span":[0, 4]}}
