crates/plotnik-lib/tests/snapshots/conformance__optional_struct_wrapper_at_child_drops_scope.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement {(identifier) @id}? @outer))

==== source ====
a;

==== types ====
export interface QOuter {
  id: Node | null;
}

export interface Q {
  outer: QOuter | null;
}

==== result ====
{"outer":{"id":{"kind":"identifier","text":"a","span":[0, 1]}}}
