crates/plotnik-lib/tests/snapshots/conformance__optional_struct_wrapper_at_child_skip_path.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement {(identifier) @id}? @outer))

==== source ====
42;

==== types ====
export interface QOuter {
  id: Node | null;
}

export interface Q {
  outer: QOuter | null;
}

==== result ====
{"outer":{"id":null}}
