crates/plotnik-lib/tests/snapshots/conformance__quantifier_skips_non_matching_siblings.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (lexical_declaration)* @decls)

==== source ====
let a; foo; let b;

==== types ====
export interface Q {
  decls: Node[];
}

==== result ====
{"decls":[{"kind":"lexical_declaration","text":"let a;","span":[0, 6]},{"kind":"lexical_declaration","text":"let b;","span":[12, 18]}]}
