crates/plotnik-lib/tests/snapshots/conformance__ref_before_anchor_backtracks_across_siblings.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Comma = ","
Q = (program (expression_statement (array (Comma) . (string) @s)))

==== source ====
[1, 2, "x"]

==== types ====
export interface Q {
  s: Node;
}

export type Comma = undefined;

==== result ====
{"s":{"kind":"string","text":"\"x\"","span":[7, 10]}}
