crates/plotnik-lib/tests/snapshots/conformance__regex_predicate_matches.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (identifier =~ /^foo/) @id))

==== source ====
foobar;

==== types ====
export interface Q {
  id: Node;
}

==== result ====
{"id":{"kind":"identifier","text":"foobar","span":[0, 6]}}
