crates/plotnik-lib/tests/snapshots/conformance__regex_predicate_rejects_non_match.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (identifier =~ /^foo/) @id))

==== source ====
barfoo;

==== types ====
export interface Q {
  id: Node;
}

==== result ====
<no match>
