crates/plotnik-lib/tests/snapshots/conformance__soft_anchor_no_comma_adjacent_to_number.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (array "," . (number) @n)))

==== source ====
[1,,]

==== types ====
export interface Q {
  n: Node;
}

==== result ====
<no match>
