crates/plotnik-lib/tests/snapshots/conformance__soft_anchor_rejects_named_node_between.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (binary_expression (identifier) @left . (identifier) @right)))

==== source ====
a + f() + b

==== types ====
export interface Q {
  left: Node;
  right: Node;
}

==== result ====
<no match>
