crates/plotnik-lib/tests/snapshots/conformance__soft_anchor_skips_comment_between_named_nodes.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (binary_expression (identifier) @left . (identifier) @right)))

==== source ====
a + /* c */ b

==== types ====
export interface Q {
  left: Node;
  right: Node;
}

==== result ====
{"left":{"kind":"identifier","text":"a","span":[0, 1]},"right":{"kind":"identifier","text":"b","span":[12, 13]}}
